--- a/.htaccess
+++ b/.htaccess
@@ -13,7 +13,8 @@
                 RewriteRule ^(.*)$ index.php?/$1 [L]
         </IfModule>
         RewriteCond %{HTTPS} off
-        RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+        #RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+        RewriteRule ^.*$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 </IfModule>
 <IfModule !mod_rewrite.c>
         ErrorDocument 404 /index.php
