--- a/.htaccess
+++ b/.htaccess
@@ -1,21 +1,28 @@
-<IfModule mod_rewrite.c>
-        Options -Indexes
-        RewriteEngine on
+#<IfModule mod_rewrite.c>
+#        Options -Indexes
+#        RewriteEngine on
         # SecFilterEngine Off
         # SecFilterScanPOST Off
-        DirectoryIndex index.php
-        RewriteCond %{REQUEST_FILENAME} !-f
-        RewriteCond %{REQUEST_FILENAME} !-d
-        <IfModule mod_php5.c>
-                RewriteRule ^(.*)$ index.php/$1 [L]
-        </IfModule>
-        <IfModule !mod_php5.c>
-                RewriteRule ^(.*)$ index.php?/$1 [L]
-        </IfModule>
-        RewriteCond %{HTTPS} off
+#        DirectoryIndex index.php
+#        RewriteCond %{REQUEST_FILENAME} !-f
+#        RewriteCond %{REQUEST_FILENAME} !-d
+#        <IfModule mod_php5.c>
+#                RewriteRule ^(.*)$ index.php/$1 [L]
+#        </IfModule>
+#        <IfModule !mod_php5.c>
+#                RewriteRule ^(.*)$ index.php?/$1 [L]
+#        </IfModule>
+        #RewriteCond %{HTTPS} off
         #RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-        RewriteRule ^.*$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-</IfModule>
-<IfModule !mod_rewrite.c>
-        ErrorDocument 404 /index.php
-</IfModule>
+        #RewriteRule ^.*$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+#</IfModule>
+#<IfModule !mod_rewrite.c>
+#        ErrorDocument 404 /index.php
+#</IfModule>
+
+RewriteEngine On
+RewriteCond %{HTTPS} off
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ index.php/$1 [L]
