--- a/.htaccess
+++ b/.htaccess
@@ -12,9 +12,9 @@
         <IfModule !mod_php5.c>
                 RewriteRule ^(.*)$ index.php?/$1 [L]
         </IfModule>
-        RewriteCond %{HTTPS} off
+        #RewriteCond %{HTTPS} off
         #RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-        RewriteRule ^.*$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+        #RewriteRule ^.*$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 </IfModule>
 <IfModule !mod_rewrite.c>
         ErrorDocument 404 /index.php
